# electron-threepenny

./: .gitignore
electron-threepenny-lib/: README.md  electron-threepenny-lib.cabal  stack.yaml
electron-threepenny-lib/lib/Electron/Threepenny/: BrowserWindow.hs  Core.hs  Core.hs~  JSRep.hs  Menu.hs  Menu.hs~
electron-threepenny-lib/lib/Electron/Threepenny/BrowserWindow/: BrowserWindow.hs  Definitions.hs
electron-threepenny-lib/lib/Electron/Threepenny/Menu/: Types.hs
electron-threepenny-sample-apps/: mknew
electron-threepenny-sample-apps/YourApp/: YourApp.cabal  electron.js
electron-threepenny-sample-apps/YourApp/src/: Main.hs
electron-threepenny-sample-apps/frameless-window/: electron.js  frameless-window.cabal  package.json
electron-threepenny-sample-apps/frameless-window/src/: Main.hs
electron-threepenny-sample-apps/frameless-window/static/: index.html
electron-threepenny-sample-apps/helloworld/: electron.js  helloworld.cabal  package.json  stack.yaml
electron-threepenny-sample-apps/helloworld/src/: Main.hs
electron-threepenny-sample-apps/menus/: electron.js  menus.cabal
electron-threepenny-sample-apps/menus/src/: Main.hs
electron-threepenny-sample-apps/mwe-ctxt/: TAGS  menus.cabal  package.json  stack.yaml
electron-threepenny-sample-apps/mwe-ctxt/src/: Main.hs
