name:                menus
version:             0.1.0.0
-- synopsis:
-- description:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable menus
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , threepenny-gui >= 0.8.2.0
                     , electron-threepenny-lib >= 0.1
